package com.springboot.MyTodoList.common.enums;

public enum AuditAction {
    CREATE, UPDATE, DELETE
}
